--- a/tooling/codelab_rebuild/pubspec.yaml
+++ b/tooling/codelab_rebuild/pubspec.yaml
@@ -3,7 +3,7 @@ description: Rebuild codelabs from a yaml file.
 version: 1.0.2
 
 environment:
-  sdk: ^3.8.0-0
+  sdk: ^3.8.0
 
 dependencies:
   checked_yaml: ^2.0.1
@@ -16,7 +16,7 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.3.3
   json_serializable: ^6.5.4
-  lints: ^5.0.0
+  lints: ^6.0.0
   test: ^1.16.0
 
 executables:
