--- a/colorist/codelab_rebuild.yaml
+++ b/colorist/codelab_rebuild.yaml
@@ -120,9 +120,9 @@ steps:
     steps:
       - name: Remove generated code
         rmdir: step_02
-      - name: Add Firebase Vertex AI dependencies
+      - name: Add Firebase AI Logic dependencies
         path: colorist
-        flutter: pub add firebase_core firebase_vertexai
+        flutter: pub add firebase_core firebase_ai
       - name: Add lib/firebase_options.dart
         path: colorist/lib/firebase_options.dart
         replace-contents: |
@@ -150,8 +150,8 @@ steps:
 
           import 'dart:async';
 
+          import 'package:firebase_ai/firebase_ai.dart';
           import 'package:firebase_core/firebase_core.dart';
-          import 'package:firebase_vertexai/firebase_vertexai.dart';
           import 'package:flutter_riverpod/flutter_riverpod.dart';
           import 'package:riverpod_annotation/riverpod_annotation.dart';
 
@@ -167,7 +167,7 @@ steps:
           Future<GenerativeModel> geminiModel(Ref ref) async {
             await ref.watch(firebaseAppProvider.future);
 
-            final model = FirebaseVertexAI.instance.generativeModel(
+            final model = FirebaseAI.googleAI().generativeModel(
               model: 'gemini-2.0-flash',
             );
             return model;
@@ -191,7 +191,7 @@ steps:
           import 'dart:async';
 
           import 'package:colorist_ui/colorist_ui.dart';
-          import 'package:firebase_vertexai/firebase_vertexai.dart';
+          import 'package:firebase_ai/firebase_ai.dart';
           import 'package:flutter_riverpod/flutter_riverpod.dart';
           import 'package:riverpod_annotation/riverpod_annotation.dart';
 
@@ -496,7 +496,7 @@ steps:
              await ref.watch(firebaseAppProvider.future);
           +  final systemPrompt = await ref.watch(systemPromptProvider.future);
 
-             final model = FirebaseVertexAI.instance.generativeModel(
+             final model = FirebaseAI.googleAI().generativeModel(
                model: 'gemini-2.0-flash',
           +    systemInstruction: Content.system(systemPrompt),
              );
@@ -527,7 +527,7 @@ steps:
           // Use of this source code is governed by a BSD-style license that can be
           // found in the LICENSE file.
 
-          import 'package:firebase_vertexai/firebase_vertexai.dart';
+          import 'package:firebase_ai/firebase_ai.dart';
           import 'package:flutter_riverpod/flutter_riverpod.dart';
           import 'package:riverpod_annotation/riverpod_annotation.dart';
 
@@ -574,7 +574,7 @@ steps:
              final systemPrompt = await ref.watch(systemPromptProvider.future);
           +  final geminiTools = ref.watch(geminiToolsProvider);
 
-             final model = FirebaseVertexAI.instance.generativeModel(
+             final model = FirebaseAI.googleAI().generativeModel(
                model: 'gemini-2.0-flash',
                systemInstruction: Content.system(systemPrompt),
           +    tools: geminiTools.tools,
@@ -703,7 +703,7 @@ steps:
            // found in the LICENSE file.
 
           +import 'package:colorist_ui/colorist_ui.dart';
-           import 'package:firebase_vertexai/firebase_vertexai.dart';
+           import 'package:firebase_ai/firebase_ai.dart';
            import 'package:flutter_riverpod/flutter_riverpod.dart';
            import 'package:riverpod_annotation/riverpod_annotation.dart';
           @@ -26,6 +27,44 @@ class GeminiTools {
@@ -775,9 +775,9 @@ steps:
           --- b/colorist/step_06/lib/services/gemini_chat_service.dart
           +++ a/colorist/step_06/lib/services/gemini_chat_service.dart
           @@ -14,46 +14,41 @@ import 'gemini_tools.dart';
-           
+
            part 'gemini_chat_service.g.dart';
-           
+
           +final conversationStateProvider = StateProvider(
           +  (ref) => ConversationState.idle,
           +);
@@ -785,13 +785,13 @@ steps:
            class GeminiChatService {
              GeminiChatService(this.ref);
              final Ref ref;
-           
+
              Future<void> sendMessage(String message) async {
                final chatSession = await ref.read(chatSessionProvider.future);
           +    final conversationState = ref.read(conversationStateProvider);
                final chatStateNotifier = ref.read(chatStateNotifierProvider.notifier);
                final logStateNotifier = ref.read(logStateNotifierProvider.notifier);
-           
+
           +    if (conversationState == ConversationState.busy) {
           +      logStateNotifier.logWarning(
           +        "Can't send a message while a conversation is in progress",
@@ -939,7 +939,7 @@ steps:
           +import 'dart:convert';
 
            import 'package:colorist_ui/colorist_ui.dart';
-           import 'package:firebase_vertexai/firebase_vertexai.dart';
+           import 'package:firebase_ai/firebase_ai.dart';
           @@ -22,6 +23,10 @@ class GeminiChatService {
              GeminiChatService(this.ref);
              final Ref ref;
