--- a/colorist/step_02/pubspec.yaml
+++ b/colorist/step_02/pubspec.yaml
@@ -9,11 +9,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  colorist_ui: ^0.2.3
+  colorist_ui: ^0.2.4
   flutter_riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
-  firebase_core: ^3.13.0
-  firebase_vertexai: ^1.6.0
+  firebase_core: ^3.13.1
+  firebase_ai: ^2.0.0
 
 dev_dependencies:
   flutter_test:
