`FirebaseAI.vertexAI` => `FirebaseAI.googleAI`

--- a/colorist/codelab_rebuild.yaml
+++ b/colorist/codelab_rebuild.yaml
@@ -167,7 +167,7 @@ steps:
           Future<GenerativeModel> geminiModel(Ref ref) async {
             await ref.watch(firebaseAppProvider.future);
 
-            final model = FirebaseAI.vertexAI().generativeModel(
+            final model = FirebaseAI.googleAI().generativeModel(
               model: 'gemini-2.0-flash',
             );
             return model;
@@ -496,7 +496,7 @@ steps:
              await ref.watch(firebaseAppProvider.future);
           +  final systemPrompt = await ref.watch(systemPromptProvider.future);
 
-             final model = FirebaseAI.vertexAI().generativeModel(
+             final model = FirebaseAI.googleAI().generativeModel(
                model: 'gemini-2.0-flash',
           +    systemInstruction: Content.system(systemPrompt),
              );
@@ -574,7 +574,7 @@ steps:
              final systemPrompt = await ref.watch(systemPromptProvider.future);
           +  final geminiTools = ref.watch(geminiToolsProvider);
 
-             final model = FirebaseAI.vertexAI().generativeModel(
+             final model = FirebaseAI.googleAI().generativeModel(
                model: 'gemini-2.0-flash',
                systemInstruction: Content.system(systemPrompt),
           +    tools: geminiTools.tools,
