--- a/audio_soloud/step_04a/ios/Podfile
+++ b/audio_soloud/step_04a/ios/Podfile
@@ -1,5 +1,5 @@
-# SoLoud requires iOS 13.0 minimum, Flutter only requires 12.0
-platform :ios, '13.0'
+# Uncomment this line to define a global platform for your project
+# platform :ios, '13.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
