--- a/in_app_purchases/step_00/app/pubspec.yaml
+++ b/in_app_purchases/step_00/app/pubspec.yaml
@@ -17,11 +17,13 @@ dependencies:
   http: ^1.4.0
   intl: ^0.20.2
   provider: ^6.1.5
+  in_app_purchase: ^3.2.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  in_app_purchase_platform_interface: ^1.4.0
 
 flutter:
   uses-material-design: true
