--- a/firebase-auth-flutterfire-ui/complete/pubspec.yaml
+++ b/firebase-auth-flutterfire-ui/complete/pubspec.yaml
@@ -4,13 +4,13 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: ^3.8.0
+  sdk: ^3.9.0-0
 
 dependencies:
   flutter:
     sdk: flutter
-  firebase_auth: ^5.5.3
-  firebase_core: ^3.13.0
+  firebase_auth: ^5.5.4
+  firebase_core: ^3.13.1
   firebase_ui_auth: ^1.16.1
   firebase_ui_oauth_google: ^1.4.1
   google_sign_in: ^6.3.0
