--- a/forge2d_game/step_04/pubspec.yaml
+++ b/forge2d_game/step_04/pubspec.yaml
@@ -4,15 +4,15 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: ^3.8.0
+  sdk: ^3.9.0-0
 
 dependencies:
   flutter:
     sdk: flutter
   characters: ^1.4.0
-  flame: ^1.28.1
-  flame_forge2d: ^0.19.0+1
-  flame_kenney_xml: ^0.1.1+11
+  flame: ^1.29.0
+  flame_forge2d: ^0.19.0+2
+  flame_kenney_xml: ^0.1.1+12
   xml: ^6.5.0
 
 dev_dependencies:
