--- a/in_app_purchases/step_10/app/ios/Podfile
+++ b/in_app_purchases/step_10/app/ios/Podfile
@@ -1,5 +1,5 @@
-# Per https://firebase.google.com/support/release-notes/ios cloud_firestore requires a minimum iOS version of 13.0
-platform :ios, '13.0'
+# Uncomment this line to define a global platform for your project
+# platform :ios, '13.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
