--- a/homescreen_codelab/codelab_rebuild.yaml
+++ b/homescreen_codelab/codelab_rebuild.yaml
@@ -1993,7 +1993,7 @@ steps:
            
            import 'home_screen.dart';
            import 'news_data.dart';
-          @@ -13,23 +15,33 @@ class ArticleScreen extends StatefulWidget {
+          @@ -13,23 +15,31 @@ class ArticleScreen extends StatefulWidget {
            }
            
            class _ArticleScreenState extends State<ArticleScreen> {
@@ -2023,16 +2023,14 @@ steps:
           -          // New: call updateHeadline
           +        onPressed: () async {
           +          if (_globalKey.currentContext != null) {
-          +            var path =
-          +                await HomeWidget.renderFlutterWidget(
-          +                      const LineChart(),
-          +                      key: 'filename',
-          +                      logicalSize: _globalKey.currentContext!.size!,
-          +                      pixelRatio: MediaQuery.of(
-          +                        _globalKey.currentContext!,
-          +                      ).devicePixelRatio,
-          +                    )
-          +                    as String;
+          +            var path = await HomeWidget.renderFlutterWidget(
+          +              const LineChart(),
+          +              key: 'filename',
+          +              logicalSize: _globalKey.currentContext!.size!,
+          +              pixelRatio: MediaQuery.of(
+          +                _globalKey.currentContext!,
+          +              ).devicePixelRatio,
+          +            );
           +            setState(() {
           +              imagePath = path;
           +            });
@@ -2040,7 +2038,7 @@ steps:
                      updateHeadline(widget.article);
                    },
                    label: const Text('Update Homescreen'),
-          @@ -44,7 +56,11 @@ class _ArticleScreenState extends State<ArticleScreen> {
+          @@ -44,7 +54,11 @@ class _ArticleScreenState extends State<ArticleScreen> {
                      const SizedBox(height: 20.0),
                      Text(widget.article.articleText!),
                      const SizedBox(height: 20.0),
