--- a/boring_to_beautiful/step_01/pubspec.yaml
+++ b/boring_to_beautiful/step_01/pubspec.yaml
@@ -1,6 +1,6 @@
 name: myartist
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
@@ -9,9 +9,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  adaptive_breakpoints: ^0.1.7
-  adaptive_components: ^0.0.10
-  adaptive_navigation: ^0.0.10
   animations: ^2.0.11
   collection: ^1.19.1
   cupertino_icons: ^1.0.8
