--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -7,7 +7,8 @@ updates:
     schedule:
       interval: "daily"
     labels:
-      - "autosubmit"
+      # Don't auto-submit github action updates until subosito/flutter-action update is cleared
+      # - "autosubmit"
   # Pip ecosystem.
   - package-ecosystem: "pip"
     directory: "/tfagents-flutter/"
