--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -6,9 +6,9 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
-    labels:
-      # Don't auto-submit github action updates until subosito/flutter-action update is cleared
-      # - "autosubmit"
+    # Don't auto-submit github action updates until subosito/flutter-action update is cleared
+    # labels:
+    #   - "autosubmit"
   # Pip ecosystem.
   - package-ecosystem: "pip"
     directory: "/tfagents-flutter/"
