Revert "Bump subosito/flutter-action from 2.19.0 to 2.20.0" again (#2328)
Reverts flutter/codelabs#2326 and prevent roll forward

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -6,8 +6,9 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
-    labels:
-      - "autosubmit"
+    # Don't auto-submit github action updates until subosito/flutter-action update is cleared
+    # labels:
+    #   - "autosubmit"
   # Pip ecosystem.
   - package-ecosystem: "pip"
     directory: "/tfagents-flutter/"
