--- a/firebase-auth-flutterfire-ui/complete/android/app/src/main/AndroidManifest.xml
+++ b/firebase-auth-flutterfire-ui/complete/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="complete"
+        android:label="firebase_auth_flutterfire_ui"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
