--- a/firebase-auth-flutterfire-ui/codelab_rebuild.yaml
+++ b/firebase-auth-flutterfire-ui/codelab_rebuild.yaml
@@ -4536,7 +4536,7 @@ steps:
            <dict>
            	<key>com.apple.security.app-sandbox</key>
            	<true/>
-          +	<key>com.apple.security.network.server</key>
+          +	<key>com.apple.security.network.client</key>
           +	<true/>
            </dict>
            </plist>
@@ -4549,7 +4549,7 @@ steps:
            	<true/>
            	<key>com.apple.security.network.server</key>
            	<true/>
-          +	<key>com.apple.security.network.server</key>
+          +	<key>com.apple.security.network.client</key>
           +	<true/>
            </dict>
            </plist>
