--- a/colorist/codelab_rebuild.yaml
+++ b/colorist/codelab_rebuild.yaml
@@ -17,9 +17,9 @@ steps:
         replace-contents: |
           include: ../../analysis_options.yaml
 
-          analyzer:
-            plugins:
-              - custom_lint
+          # analyzer:
+          #   plugins:
+          #     - custom_lint
 
           linter:
             rules:
