--- a/adaptive_app/step_04/pubspec.yaml
+++ b/adaptive_app/step_04/pubspec.yaml
@@ -37,9 +37,9 @@ dependencies:
   googleapis: ^14.0.0
   http: ^1.4.0
   provider: ^6.1.5
-  url_launcher: ^6.3.1
-  flex_color_scheme: ^8.2.0
-  go_router: ^15.2.0
+  url_launcher: ^6.3.2
+  flex_color_scheme: ^8.2.1-dev.1
+  go_router: ^16.0.0
 
 dev_dependencies:
   flutter_test:
