--- a/adaptive_app/step_07/pubspec.yaml
+++ b/adaptive_app/step_07/pubspec.yaml
@@ -35,15 +35,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   googleapis: ^14.0.0
+  http: ^1.4.0
   provider: ^6.1.5
-  url_launcher: ^6.3.1
-  flex_color_scheme: ^8.2.0
-  go_router: ^15.2.0
+  url_launcher: ^6.3.2
+  flex_color_scheme: ^8.2.1-dev.1
+  go_router: ^16.0.0
   split_view: ^3.2.1
   googleapis_auth: ^2.0.0
   google_sign_in: ^6.3.0
   extension_google_sign_in_as_googleapis_auth: ^2.0.13
-  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
